<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

    <group android:id="@+id/grp1" android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_flag_black_18dp"
            android:title="@string/menu_bookmarks" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_watch_later_black_18dp"
            android:title="@string/menu_history" />
    </group>
    <group android:id="@+id/grp2" android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_18dp"
            android:title="@string/menu_settings" />
    </group>
    <group android:id="@+id/grp3" android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_18dp"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_18dp"
            android:title="@string/menu_about" />
    </group>
    </group>
</menu>
