<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_bookmark"
        android:orderInCategory="1"
        android:icon="@drawable/ic_flag_white_24dp"
        android:title="@string/action_add_bookmark"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="2"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_reset"
        android:orderInCategory="3"
        android:title="@string/action_reset"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help_main"
        android:orderInCategory="4"
        android:title="@string/activity_title_help"
        app:showAsAction="never" />
</menu>