<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort_bookmarks"
        android:orderInCategory="1"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/action_sort_bookmarks"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_backup_bookmarks"
        android:orderInCategory="2"
        android:title="@string/action_backup_bookmarks"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_restore_bookmarks"
        android:orderInCategory="3"
        android:title="@string/action_restore_bookmarks"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help_bookmarks"
        android:orderInCategory="4"
        android:title="@string/activity_title_help"
        app:showAsAction="never" />
</menu>
