<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.NoPlayServicesFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txt_no_maps_title"
        android:text="@string/layout_no_maps_title"
        android:gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textStyle="bold"
        android:textColor="#ff0000"  />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/txt_no_maps_text"
        android:layout_below="@+id/txt_no_maps_title"
        android:text="@string/layout_no_maps_text"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textStyle="bold"
        android:textColor="#ff0000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/txt_back_button"
        android:layout_below="@+id/txt_no_maps_text"
        android:text="@string/layout_press_back_button"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="#ff0000" />

</RelativeLayout>
